--- a/[08] docs/하이퍼레저 패브릭 네트워크 구축.md
+++ b/[08] docs/하이퍼레저 패브릭 네트워크 구축.md
@@ -11,7 +11,7 @@ $ sudo apt install curl
 $ curl -V
 ```
 
-![curl](C:\Users\multicampus\Desktop\image\curl.PNG)
+![curl](./images/curl.PNG)
 
 #### 0-2. docker, docker-compose 설치
 
@@ -25,14 +25,14 @@ $ sudo usermode -aG docker $USER		//사용자 계정에 권한 추가
 $ sudo reboot
 ```
 
-![docker](C:\Users\multicampus\Desktop\image\docker.PNG)
+![docker](./image/docker.PNG)
 
 ```
 $ sudo curl -L "https://github.com/docker/compose/releases/download/1.22.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose"
 $ sudo chmod +x /usr/local/bin/docker-compose
 ```
 
-![docker-compose](C:\Users\multicampus\Desktop\image\docker-compose.PNG)
+![docker-compose](./image/docker-compose.PNG)
 
 #### 0-3. Go 언어 설치
 
@@ -54,7 +54,7 @@ $ sudo reboot
 $ vi .bashrc		//맨 아래에 추가 된 것을 확인 할 수 있음.
 ```
 
-![bashrc](C:\Users\multicampus\Desktop\image\bashrc.PNG)
+![bashrc](./image/bashrc.PNG)
 
 #### 0-4. Git 설치
 
@@ -64,7 +64,7 @@ $ sudo apt install git
 $ git --version
 ```
 
-![git](C:\Users\multicampus\Desktop\image\git.PNG)
+![git](./image/git.PNG)
 
 #### 0-5. Node.js, npm 설치
 
@@ -78,7 +78,7 @@ $ node -v
 $ npm -v
 ```
 
-![node](C:\Users\multicampus\Desktop\image\node.PNG)
+![node](./image/node.PNG)
 
 
 
@@ -113,7 +113,7 @@ $ ./byfn.sh down	//down: 네트워크 종료
 
 ## 2. 네트워크 구축
 
-![first_network](C:\Users\multicampus\Desktop\image\first_network.PNG)
+![first_network](./image/first_network.PNG)
 
 #### 2-1. 디렉터리 생성 및 설정
 
@@ -445,7 +445,7 @@ $ docker-compose -f docker-compose.yaml -p net up -d orderer.rot.com peer0.estat
 
 - docker ps -a 명령어로 확인 할 수 있다.
 
-![docker-start](C:\Users\multicampus\Desktop\image\docker-start.PNG)
+![docker-start](./image/docker-start.PNG)
 
 #### 2-5. 만들어 놨던 제네시스 채널 트랜잭션 파일로 채널을 생성 및 가입
 
@@ -481,7 +481,7 @@ $ docker exec -e "CORE_PEER_LOCALMSPID=Estate2Org" -e "CORE_PEER_MSPCONFIGPATH=/
 
 - 사진은 터미널 2만 첨부함.
 
-![cli](C:\Users\multicampus\Desktop\image\cli.PNG)
+![cli](./image/cli.PNG)
 
 #### 2-6. 체인코드 작성을 위한 환경 구성
 
@@ -699,7 +699,7 @@ $ go get -u github.com/hyperledger/fabric/core/chaincode/shim
 
 - 빌드 된 것을 확인할 수 있다.
 
-![go](C:\Users\multicampus\Desktop\image\go.PNG)
+![go](./image/go.PNG)
 
 #### 3-2. 체인코드 테스트
 
@@ -716,7 +716,7 @@ $ docker exec -it cli bash
 # peer chaincode install -l golang -n estate001 -v 1.0 -p github.com/chaincode/go
 ```
 
-![install](C:\Users\multicampus\Desktop\image\install.PNG)
+![install](./image/install.PNG)
 
 - 인스턴스화
 
@@ -724,7 +724,7 @@ $ docker exec -it cli bash
 # peer chaincode instantiate -o orderer.rot.com:7050 -C channelestate1 -n estate001 -v 1.0 -c '{"Args":[""]}' -P "OR ('Estate1Org.member')" 
 ```
 
-![instantiate](C:\Users\multicampus\Desktop\image\instantiate.PNG)
+![instantiate](./image/instantiate.PNG)
 
 - invoke 호출하여 setContractRecord
 
@@ -757,7 +757,7 @@ $ vi docker-compose-ca.yaml
 
 - crypto-config 디렉터리에서 tree 해보면, 인증서 이름을 확인 할 수 있다.
 
-![ca](C:\Users\multicampus\Desktop\image\ca.PNG)
+![ca](./image/ca.PNG)
 
 - CA 서버를 Estate1조직에 연결해 서비스 할 것이다.
 - docker-compose-ca.yaml 작성
@@ -801,7 +801,7 @@ $ docker ps -a
 
 #### 5-1. 하이퍼레저 패브릭 SDK
 
-![sdk](C:\Users\multicampus\Desktop\image\sdk.PNG)
+![sdk](./image/sdk.PNG)
 
 - 하이퍼레저 패브릭 SDK를 이용하여 외부에서 하이퍼레저 패브릭 네트워크에 접속할 수 있도록 해야함.
 
