--- a/[08] docs/하이퍼레저 패브릭 네트워크 구축.md
+++ b/[08] docs/하이퍼레저 패브릭 네트워크 구축.md
@@ -11,7 +11,7 @@ $ sudo apt install curl
 $ curl -V
 ```
 
-![curl](./images/curl.PNG)
+![curl](./image/curl.PNG)
 
 #### 0-2. docker, docker-compose 설치
 
@@ -732,7 +732,7 @@ $ docker exec -it cli bash
 # peer chaincode invoke -o orderer.rot.com:7050 -C channelestate1 -n estate001 -c '{"function":"setContractRecord","Args":["2","대전","3456","test","tset","tset","tset","setasdf","asd","asd","bsd","asdf","bfdf","zxc","1234"]}'
 ```
 
-![set](C:\Users\multicampus\Desktop\image\set.PNG)
+![set](./image/set.PNG)
 
 - query 호출하여 getContractRecord 
 
@@ -740,7 +740,7 @@ $ docker exec -it cli bash
 # peer chaincode query -o orderer.rot.com:7050 -C channelestate1 -n estate001 -c '{"function":"getContractRecord","Args":["2"]}'     
 ```
 
-![get](C:\Users\multicampus\Desktop\image\get.PNG)
+![get](./image/get.PNG)
 
 
 
