--- a/[04] 데이터파일/dataframe을mysql에 저장하기(contract,around).ipynb
+++ b/[04] 데이터파일/dataframe을mysql에 저장하기(contract,around).ipynb
@@ -71,11 +71,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "db_connection_str = 'mysql+pymysql://test:rot123456789!!@k02b2031.p.ssafy.io:3306/rot'\n",
+    "db_connection_str = 'mysql+pymysql://rot:rot1234!!@54.180.54.106:3306/rot'\n",
     "db_connection = create_engine(db_connection_str)\n",
     "conn = db_connection.connect()"
    ]
@@ -111,12 +111,14 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "dtypes={'address':str,'sd':str,'sgg':str,'emd':str,'latitude':str,\n",
     "       'longitude':str,'exclusive':str,'floor':str,'ho':str,'detail':str,'cost':int,'monthly':str,'license':str,'image':str,'contractedAt':str}\n",
-    "df = pd.read_csv('./data/백업Building.csv', dtype = dtypes)\n",
+    "df = pd.read_csv('./data/백업contract_0csv', dtype = dtypes)\n",
     "df.drop(columns='createdAt', inplace = True)\n",
     "df.rename(columns={'contractedAt':'contract_date'}, inplace=True)\n",
     "df.dtypes"
