--- a/[04] 데이터파일/가상으로만든user,interest,favorite데이터.ipynb
+++ b/[04] 데이터파일/가상으로만든user,interest,favorite데이터.ipynb
@@ -29,14 +29,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db_connection_str = 'mysql+pymysql://test:rot123456789!!@k02b2031.p.ssafy.io:3306/rot'\n",
+    "db_connection_str = 'mysql+pymysql://rot:rot1234!!@54.180.54.106:3306/rot'\n",
     "db_connection = create_engine(db_connection_str)\n",
     "conn = db_connection.connect()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
        "227"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -250,57 +250,57 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2001</td>\n",
-       "      <td>마트/편의점</td>\n",
-       "      <td>문화시설</td>\n",
+       "      <td>2003</td>\n",
+       "      <td>교육시설</td>\n",
        "      <td>음식점/카페</td>\n",
-       "      <td>남자</td>\n",
-       "      <td>전라북도</td>\n",
-       "      <td>고창군</td>\n",
+       "      <td>문화시설</td>\n",
+       "      <td>여자</td>\n",
+       "      <td>경기도</td>\n",
+       "      <td>여주시</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1992</td>\n",
-       "      <td>문화시설</td>\n",
-       "      <td>마트/편의점</td>\n",
+       "      <td>1996</td>\n",
        "      <td>교육시설</td>\n",
+       "      <td>의료시설</td>\n",
+       "      <td>음식점/카페</td>\n",
        "      <td>여자</td>\n",
-       "      <td>전라북도</td>\n",
-       "      <td>군산시</td>\n",
+       "      <td>경상북도</td>\n",
+       "      <td>영덕군</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1994</td>\n",
-       "      <td>마트/편의점</td>\n",
+       "      <td>1989</td>\n",
+       "      <td>음식점/카페</td>\n",
        "      <td>교육시설</td>\n",
-       "      <td>의료시설</td>\n",
+       "      <td>교통</td>\n",
        "      <td>여자</td>\n",
        "      <td>경상남도</td>\n",
-       "      <td>함안군</td>\n",
+       "      <td>진주시</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1974</td>\n",
-       "      <td>의료시설</td>\n",
+       "      <td>2008</td>\n",
        "      <td>문화시설</td>\n",
        "      <td>마트/편의점</td>\n",
+       "      <td>의료시설</td>\n",
        "      <td>여자</td>\n",
-       "      <td>전라남도</td>\n",
-       "      <td>목포시</td>\n",
+       "      <td>부산광역시</td>\n",
+       "      <td>사하구</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1972</td>\n",
-       "      <td>의료시설</td>\n",
-       "      <td>음식점/카페</td>\n",
+       "      <td>1986</td>\n",
+       "      <td>문화시설</td>\n",
+       "      <td>교육시설</td>\n",
        "      <td>마트/편의점</td>\n",
        "      <td>여자</td>\n",
-       "      <td>경상북도</td>\n",
-       "      <td>영덕군</td>\n",
+       "      <td>광주광역시</td>\n",
+       "      <td>서구</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -308,15 +308,15 @@
        "</div>"
       ],
       "text/plain": [
-       "   birth   first  second   third gender    sd  sgg  user_num\n",
-       "0   2001  마트/편의점    문화시설  음식점/카페     남자  전라북도  고창군         0\n",
-       "1   1992    문화시설  마트/편의점    교육시설     여자  전라북도  군산시         1\n",
-       "2   1994  마트/편의점    교육시설    의료시설     여자  경상남도  함안군         2\n",
-       "3   1974    의료시설    문화시설  마트/편의점     여자  전라남도  목포시         3\n",
-       "4   1972    의료시설  음식점/카페  마트/편의점     여자  경상북도  영덕군         4"
+       "   birth   first  second   third gender     sd  sgg  user_num\n",
+       "0   2003    교육시설  음식점/카페    문화시설     여자    경기도  여주시         0\n",
+       "1   1996    교육시설    의료시설  음식점/카페     여자   경상북도  영덕군         1\n",
+       "2   1989  음식점/카페    교육시설      교통     여자   경상남도  진주시         2\n",
+       "3   2008    문화시설  마트/편의점    의료시설     여자  부산광역시  사하구         3\n",
+       "4   1986    문화시설    교육시설  마트/편의점     여자  광주광역시   서구         4"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -373,39 +373,39 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2001</td>\n",
-       "      <td>마트/편의점</td>\n",
-       "      <td>문화시설</td>\n",
+       "      <td>2003</td>\n",
+       "      <td>교육시설</td>\n",
        "      <td>음식점/카페</td>\n",
-       "      <td>남자</td>\n",
-       "      <td>전라북도</td>\n",
-       "      <td>고창군</td>\n",
+       "      <td>문화시설</td>\n",
+       "      <td>여자</td>\n",
+       "      <td>경기도</td>\n",
+       "      <td>여주시</td>\n",
        "      <td>0</td>\n",
-       "      <td>전라북도 고창군</td>\n",
+       "      <td>경기도 여주시</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1992</td>\n",
-       "      <td>문화시설</td>\n",
-       "      <td>마트/편의점</td>\n",
+       "      <td>1996</td>\n",
        "      <td>교육시설</td>\n",
+       "      <td>의료시설</td>\n",
+       "      <td>음식점/카페</td>\n",
        "      <td>여자</td>\n",
-       "      <td>전라북도</td>\n",
-       "      <td>군산시</td>\n",
+       "      <td>경상북도</td>\n",
+       "      <td>영덕군</td>\n",
        "      <td>1</td>\n",
-       "      <td>전라북도 군산시</td>\n",
+       "      <td>경상북도 영덕군</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   birth   first  second   third gender    sd  sgg  user_num       hap\n",
-       "0   2001  마트/편의점    문화시설  음식점/카페     남자  전라북도  고창군         0  전라북도 고창군\n",
-       "1   1992    문화시설  마트/편의점    교육시설     여자  전라북도  군산시         1  전라북도 군산시"
+       "   birth first  second   third gender    sd  sgg  user_num       hap\n",
+       "0   2003  교육시설  음식점/카페    문화시설     여자   경기도  여주시         0   경기도 여주시\n",
+       "1   1996  교육시설    의료시설  음식점/카페     여자  경상북도  영덕군         1  경상북도 영덕군"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,16 +477,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(243091, 3)"
+       "(241338, 3)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,21 +497,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3    74099\n",
-       "4    53187\n",
-       "2    52700\n",
-       "1    31742\n",
-       "5    31363\n",
+       "3    73161\n",
+       "4    53083\n",
+       "2    52046\n",
+       "5    31580\n",
+       "1    31468\n",
        "Name: score, dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,27 +542,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "38111    47\n",
-       "37863    47\n",
-       "37945    45\n",
-       "38076    44\n",
-       "38001    43\n",
+       "38088    43\n",
+       "37864    42\n",
+       "38747    42\n",
+       "20151    41\n",
+       "19428    41\n",
        "         ..\n",
-       "29030     1\n",
-       "24932     1\n",
-       "4498      1\n",
-       "10645     1\n",
-       "30551     1\n",
-       "Name: around, Length: 37290, dtype: int64"
+       "24255     1\n",
+       "36645     1\n",
+       "5942      1\n",
+       "7991      1\n",
+       "2049      1\n",
+       "Name: around, Length: 37092, dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -573,16 +573,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(221170, 3)"
+       "(219736, 3)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +625,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>38270</td>\n",
+       "      <td>6381</td>\n",
        "      <td>0</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
@@ -635,10 +635,10 @@
       ],
       "text/plain": [
        "   around  user  score\n",
-       "0   38270     0      3"
+       "0    6381     0      3"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
