--- a/[04] 데이터파일/0610contract_around값수정후_db업로드.ipynb
+++ b/[04] 데이터파일/0610contract_around값수정후_db업로드.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,18 +14,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "db_connection_str = 'mysql+pymysql://test:rot123456789!!@k02b2031.p.ssafy.io:3306/rot'\n",
+    "db_connection_str = 'mysql+pymysql://rot:rot1234!!@54.180.54.106:3306/rot'\n",
     "db_connection = create_engine(db_connection_str)\n",
     "conn = db_connection.connect()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -68,9 +68,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>contract_id</th>\n",
-       "      <th>address</th>\n",
-       "      <th>longitude</th>\n",
-       "      <th>latitude</th>\n",
+       "      <th>around_around_id</th>\n",
        "      <th>exclusive</th>\n",
        "      <th>floor</th>\n",
        "      <th>ho</th>\n",
@@ -81,122 +79,22 @@
        "      <th>license</th>\n",
        "      <th>image</th>\n",
        "      <th>contract_date</th>\n",
+       "      <th>created_at</th>\n",
+       "      <th>is_expired</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>대전광역시 대덕구 신탄진로834번길 15</td>\n",
-       "      <td>36.4521628823</td>\n",
-       "      <td>127.429534904</td>\n",
-       "      <td>79.87</td>\n",
-       "      <td>8</td>\n",
-       "      <td>15</td>\n",
-       "      <td>오피스텔</td>\n",
-       "      <td>매매</td>\n",
-       "      <td>16500</td>\n",
-       "      <td>0</td>\n",
-       "      <td>SSAFY-대전-004</td>\n",
-       "      <td>e6157aad-881a-4ed8-ba7a-d74d0a721e7d.png</td>\n",
-       "      <td>2019-09-20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>대전광역시 대덕구 신탄진로834번길 15</td>\n",
-       "      <td>36.4521628823</td>\n",
-       "      <td>127.429534904</td>\n",
-       "      <td>31.64</td>\n",
-       "      <td>9</td>\n",
-       "      <td>10</td>\n",
-       "      <td>오피스텔</td>\n",
-       "      <td>매매</td>\n",
-       "      <td>8100</td>\n",
-       "      <td>0</td>\n",
-       "      <td>SSAFY-대전-003</td>\n",
-       "      <td>d5bff03b-8d41-41ca-90c3-24f333b4259d.png</td>\n",
-       "      <td>2020-02-06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>대전광역시 동구 대전로867번길 52</td>\n",
-       "      <td>36.3355440829</td>\n",
-       "      <td>127.427568192</td>\n",
-       "      <td>33.71</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>오피스텔</td>\n",
-       "      <td>매매</td>\n",
-       "      <td>1950</td>\n",
-       "      <td>0</td>\n",
-       "      <td>SSAFY-대전-003</td>\n",
-       "      <td>cb479600-bae1-4661-b8f2-764900ba85d9.png</td>\n",
-       "      <td>2019-11-11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>대전광역시 동구 대전로867번길 52</td>\n",
-       "      <td>36.3355440829</td>\n",
-       "      <td>127.427568192</td>\n",
-       "      <td>28.05</td>\n",
-       "      <td>9</td>\n",
-       "      <td>9</td>\n",
-       "      <td>오피스텔</td>\n",
-       "      <td>매매</td>\n",
-       "      <td>1600</td>\n",
-       "      <td>0</td>\n",
-       "      <td>SSAFY-대전-003</td>\n",
-       "      <td>ddde283d-5d07-41ad-a073-2b214e507634.png</td>\n",
-       "      <td>2019-11-13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>대전광역시 동구 대전로867번길 52</td>\n",
-       "      <td>36.3355440829</td>\n",
-       "      <td>127.427568192</td>\n",
-       "      <td>28.05</td>\n",
-       "      <td>3</td>\n",
-       "      <td>5</td>\n",
-       "      <td>오피스텔</td>\n",
-       "      <td>매매</td>\n",
-       "      <td>1700</td>\n",
-       "      <td>0</td>\n",
-       "      <td>SSAFY-대전-005</td>\n",
-       "      <td>f6c8e28b-bb2d-49e1-b9b3-97da4a2ece95.png</td>\n",
-       "      <td>2019-11-18</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   contract_id                 address      longitude       latitude  \\\n",
-       "0            1  대전광역시 대덕구 신탄진로834번길 15  36.4521628823  127.429534904   \n",
-       "1            2  대전광역시 대덕구 신탄진로834번길 15  36.4521628823  127.429534904   \n",
-       "2            3    대전광역시 동구 대전로867번길 52  36.3355440829  127.427568192   \n",
-       "3            4    대전광역시 동구 대전로867번길 52  36.3355440829  127.427568192   \n",
-       "4            5    대전광역시 동구 대전로867번길 52  36.3355440829  127.427568192   \n",
-       "\n",
-       "  exclusive floor  ho  kind detail   cost monthly       license  \\\n",
-       "0     79.87     8  15  오피스텔     매매  16500       0  SSAFY-대전-004   \n",
-       "1     31.64     9  10  오피스텔     매매   8100       0  SSAFY-대전-003   \n",
-       "2     33.71     5   5  오피스텔     매매   1950       0  SSAFY-대전-003   \n",
-       "3     28.05     9   9  오피스텔     매매   1600       0  SSAFY-대전-003   \n",
-       "4     28.05     3   5  오피스텔     매매   1700       0  SSAFY-대전-005   \n",
-       "\n",
-       "                                      image contract_date  \n",
-       "0  e6157aad-881a-4ed8-ba7a-d74d0a721e7d.png    2019-09-20  \n",
-       "1  d5bff03b-8d41-41ca-90c3-24f333b4259d.png    2020-02-06  \n",
-       "2  cb479600-bae1-4661-b8f2-764900ba85d9.png    2019-11-11  \n",
-       "3  ddde283d-5d07-41ad-a073-2b214e507634.png    2019-11-13  \n",
-       "4  f6c8e28b-bb2d-49e1-b9b3-97da4a2ece95.png    2019-11-18  "
+       "Empty DataFrame\n",
+       "Columns: [contract_id, around_around_id, exclusive, floor, ho, kind, detail, cost, monthly, license, image, contract_date, created_at, is_expired]\n",
+       "Index: []"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2321,17 +2219,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "dtypes={'address':str,'latitude':str,'longitude':str,'trans':int,'comforts':int,'education':int,'medical':int,'eatery':int,'culture':int,'around_id':int}\n",
-    "b_around = pd.read_csv('백업around_0610.csv', dtype=dtypes)"
+    "b_around = pd.read_csv('./data/백업around_0610.csv', dtype=dtypes)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -2350,7 +2248,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2361,7 +2259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -2483,7 +2381,7 @@
        "4    2322       19   37.540403947  127.133750787  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2494,18 +2392,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "dtypes1={'contract_id':int,'exclusive':str,'ho':str,'floor':str,'kind':str,'detail':str,'cost':str,'monthly':str,'license':str,'image':str,'contract_date':str,'around_around_id':int}\n",
     "\n",
-    "b_contract = pd.read_csv('백업contract_0610.csv', dtype=dtypes1)"
+    "b_contract = pd.read_csv('./data/백업contract_0610.csv', dtype=dtypes1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -2526,7 +2424,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2537,7 +2435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -2671,7 +2569,7 @@
        "4  f6c8e28b-bb2d-49e1-b9b3-97da4a2ece95.png    2019-11-18             22185  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2682,7 +2580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2692,7 +2590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -2968,7 +2866,7 @@
        "[162834 rows x 14 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2979,7 +2877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -3000,7 +2898,7 @@
        "Name: 1054, dtype: object"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3011,7 +2909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3020,7 +2918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
